scss/post.scss
/* ... */
[data-region="drawer"] {
  padding-left: initial;
  padding-right: initial;
  background-color: $primary;

  .list-group-item {
    background-color: $primary;
    color: white;
    border: none;

    &:hover {
      background-color: $savoir-darkprimary;
    }
  }

  .list-group-item.active {
    background-color: darken($primary, 10%);
  }

  z-index: $zindex-navbar-fixed + 1; // Avoid the drop shadow
}

.card {
  border: none;
  background: none;
  box-shadow: none;
}

.card-body {
  border-radius: 3px;
  border: none;
  box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
  border-top: 3px solid $primary;
}

.card-header {
  background-color: $primary;
  color: white;
}

/* Remove box shadow for first card body and on the header */

.card-no-border, #page-header .card-body {
  border-radius: initial;
  border: none;
  border-top: none;
  box-shadow: none;
}

/* Front page layout */
#page-site-index {
  #page-wrapper {
    background-image: url('[[pix:theme_savoir|background]]');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    overflow: hidden; /*Avoid unwanted scroll*/
  }

  #page-wrapper::after {
    content: initial;
    min-height: initial;
  }

  @media (max-width: map-get($grid-breakpoints, "md")) {
    .navbar div.logo {
      width: initial;
    }
  }

  .card-body {
    box-shadow: none;
    border-top: none;
  }

  .card {
    color: white;

    a {
      color: white;
      @include hover-focus {
        color: white;
      }
    }

    .site-frontpage-slogan {
      max-width: 20em;
      text-align: center;
    }

    .site-frontpage-title {
      font-size: 4vw;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        font-size: xx-large;
      }
      font-weight: bold;
    }

    .connect-button {
      border-radius: 5px;
      border: solid 3px white;
      font-size: x-large;
      font-style: normal;
      font-stretch: normal;
      line-height: normal;
      letter-spacing: 1.5pt;
      text-align: center;
      font-variant: small-caps;
      color: white;
      padding: 0.5em 2em;
      @media (max-width: map-get($grid-breakpoints, "md")) {
        padding: 0.25em 2em;
      }
      @include hover-focus {
        color: $secondary;
        text-decoration: none;
        background: white;
      }
    }

    min-height: initial;
  }

  #page {
    min-height: 100vh;
  }

  #page-content {
    .section .activity .modtype_label .label {
      div {
        padding-right: 0;
      }
    }

    .section .label .contentwithoutlink {
      padding-right: 0;
    }
  }
}

/* Dashboard */
.db-doubleblock {
  width: 49%;
}

.db-singleblock {
  width: 100%;
}

@media (max-width: map-get($grid-breakpoints, "md")) {
  .db-doubleblock {
    width: 100%;
  }
}

.block_calendar_month {
  table.minicalendar {
    width: 100%;

    caption.calendar-controls {
      text-align: center;
    }
  }
}

// Upcoming block
.block_calendar_upcoming {
  .event {
    a[data-type='event'] {
      color: $savoir-darkgrey;
      font-weight: bold;
      @include hover-focus {
        color: $savoir-lightergrey;
      }

      i.icon {
        float: right;
      }
    }

    .date {
      font-size: smaller;
      line-height: 1.75;
      color: lighten($savoir-lightergrey, 10%);

      a {
        color: lighten($savoir-lightergrey, 10%);
        @include hover-focus {
          color: lighten($savoir-lightergrey, 10%);
        }
      }
    }
  }
}

// Calendar block
.block_calendar_month {
  .calendar_event_course {
    background-color: lighten($primary, 50%);

    a {
      font-weight: bolder;
      @include hover-focus {
        text-decoration: none;
      }
    }
  }

  .calendar-controls {
    a.arrow_link.previous {
      float: left;
    }

    a.arrow_link.next {
      float: right;
    }
  }

  .minicalendar {
    text-align: cgienter;
  }
}

// Calendar page

#page-calendar-view {
  .calendarwrapper {
    h3 {
      font-size: initial;
    }

    .card-header {
      background-color: lighten($savoir-darkgrey, 10%);
      padding-top: 0.25em !important;
      padding-bottom: 0.25em !important;

      span.date a {
        color: white;
        @include hover-focus {
          color: white;
        }
      }
    }
  }
}

/** Course list **/
.my-course-list {
  li.list-group-item {
    border-radius: 3px;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
  }
}

/** Topic Collapsible Changes */
#page-course-view-topcoll {
  div.sectionhead.toggle {
    background: none;

    &:hover {
      background: none;
    }
  }

  h3.sectionname {
    font-size: $h3-font-size;
    font-weight: bolder;
    font-style: normal;
    font-variant: small-caps;
    line-height: 1.71;
    letter-spacing: normal;
    color: var(--dark-grey);
    text-align: left;
  }

  .tc-small {
    font-size: small;
    font-variant: small-caps;
  }

  .course-content ul.ctopics li.section .content.sectionhidden {
    background-color: transparent;
  }

  .content.sectionhidden > h3 {
    font-size: initial;
  }
}

/* Mods */

/** General navigation */
.activity-navigation {
  border: none;
  border-top: 3px solid $primary;
  border-radius: 3px;
  padding-top: 1em;
  padding-bottom: 1em;
}

/*Quiz*/
.que {
  .formulation {
    border-radius: 3px;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
    background-color: white;
    border-top: 3px solid $primary;
  }

  .info {
    background-color: saturate(lighten($secondary, 50%), 80%);
    border-radius: 3px;
    box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.15);
    border-top: 3px solid $primary;
  }

  .submitbtns {
    margin: 0 0 0 8.5em;
  }
}
/* ... */

